--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
 </head>
 <body>
     <div class="title">
-        <h1>Fanpage : Pranavi</h1>
+        <h1>Fanpage: Ariana Grande</h1>
     </div>
     <div class="intro">
         <p>Welcome to Pranavi's fanpage. </p>
-        <p>Here you can find some information about my favorite artist : Pentatonix</p>
+        <p>Here you can find some information about my favorite artist : Ariana Grande</p>
 
-        <p>I really like this band, because all their songs are sung acapella.</p>
-        <p>That means, they don't use any instruments!</p>
-        <p>They do everything with their voices!</p>
+        <p>I really like her music, because all her songs are really good!</p>
+        
     </div>
     <div class="youtube">
         <iframe width="560" 
                 height="315" 
-                src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" 
+                src="https://www.youtube.com/watch?v=iO0KU5pk8Sg" 
                 title="YouTube video player" 
                 frameborder="0" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
