--- a/photos.html
+++ b/photos.html
@@ -13,8 +13,8 @@
     <div class="subtitle">
         <h2>Photos</h2>
     </div>
-    <img src="ari.jpg">
-    <img src="ari2.jpg">
+    <img src="img/ari.jpg">
+    <img src="img/ari2.png">
     <a href="index.html"><input type="button" value="back"></a>
 </body>
 </html>
