--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
     <div class="menu">
         <a href="statistics.html"><input type="button" value="statistics"></a>
     </div>
+    <div class="menu">
+        <a href="photos.html"><input type="button" value="Photos"></a>
+    </div>
 </body>
 </html>
